config rules made

--- a/conf/default.conf
+++ b/conf/default.conf
@@ -6,7 +6,7 @@ love
 	ports: 6060, 303, 4,
 	1982773982713, hahaha, -80;
 	error_pages:
-		404: ./html/error404.html;
+		404: /html/error404.html;
 	max_client_body_size: 56;
 	/ {
 		http_methods: GET, DELETE, POST;
@@ -15,6 +15,7 @@ love
 		directory_listing: on;
 		default_file: index.html
 		cgi_extensions: .dms, .py, .c
+		upload_directory: /html/upload
 	}
 	/whatsup {
 		http_methods: DELETE;
@@ -22,8 +23,11 @@ love
 		directory_listing: off;
 		default_file: goodbye.html;
 		cgi_extensions: .dms
+		upload_directory: src
 	}
 }
+
+- everything in a line is ignored if after a #hashtag
 
 hate {
 	server_names: ok if missing!;
@@ -37,6 +41,8 @@ hate {
 		directory_listing: on or off.  off by default. doesnt need to be there.
 		default_file: doesnt need to be there. can be any file, so no limitations. needs to be one file however
 		cgi_extensions: need to be either .dms, .py, .c | all allowed by default, so no need
+		upload_directory: string. needs to start with /. if upload is on, needs to be there. error if dir not there. can be created maybe?
+							inc, obj, src, conf invalid.
 	}
 		}
 
@@ -52,6 +58,8 @@ things;
 	root:;
 	directory_listing:  fdd        ; default_file:;
 	cgi_extensions: ;
+	upload_directory:     	 	
+	;
 }
 
 
