basic config file parsing possible. gott was fuern abfuck. removed std:: from everything

--- a/conf/default.conf
+++ b/conf/default.conf
@@ -1,65 +1,96 @@
-love
-{
-	server_names:	abcdegf, uhuh,
-	no
-	;
-	ports: 6060, 303, 4,
-	1982773982713, hahaha, -80;
-	error_pages:
-		404: /html/error404.html;
-	max_client_body_size: 56;
+correct love {
+	server_names:	abcdegf, uhuh, no
+	ports: 6060, 303, 4, 1982773982713, hahaha, -80
+	error_pages {
+		404: /html/error404.html
+	}
+	max_client_body_size: 56
 	/ {
-		http_methods: GET, DELETE, POST;
-		http_redirect: /hello;
+		http_methods: GET, DELETE, POST
+		http_redirect: /hello
 		root: /html
-		directory_listing: on;
+		directory_listing: on
 		default_file: index.html
 		cgi_extensions: .dms, .py, .c
 		upload_directory: /html/upload
 	}
 	/whatsup {
-		http_methods: DELETE;
-		root: /html/hehe;
-		directory_listing: off;
-		default_file: goodbye.html;
+		http_methods: DELETE
+		root: /html/hehe
+		directory_listing: off
+		default_file: goodbye.html
 		cgi_extensions: .dms
 		upload_directory: src
 	}
 }
 
-- everything in a line is ignored if after a #hashtag
+wrong { love {
+	server_names:	abcdegf, uhuh,
+	no
+	
+	ports: 6060, 303, 4,
+	1982773982713, hahaha, -80
+	error_pages {
+		404: /html/error404.html
+	}}}
+	max_client_body_size: 56
+	/ {
+		http_methods: GET, DELETE, POST
+		http_redirect: /hello
+		root: /html
+		directory_listing: on
+		default_file: index.html
+		cgi_extensions: .dms, .py, .c
+		upload_directory: /html/upload
+	}
+	/whatsup {
+		http_methods: DELETE
+		root: /html/hehe
+		directory_listing: off
+		default_file: goodbye.html
+		cgi_extensions: .dms
+		upload_directory: src
+	}
+}
+}
+
+general rules:
+	- 3 types of lines:	new block		-> optionally name and then an opening bracket at the end of a lines
+						closing block	-> only whitespace and then closing bracket at EOL
+						setting			-> no brackets, whitespace allowed, needs to have semicolon
+						(empty)			-> empty line with any kind of whitespace allowed
 
 hate {
-	server_names: ok if missing!;
-	ports: at least 1!. between 0 and USHORT_MAX;
-	error_pages: ok if missing i think? need to check if that works;
-	max_client_body_size:   in characters/bytes. up to int_max or sth i guess. only one, if not there read until eof;
-	routes: start with / and then the url, opens and closes brackets. {
-		http_methods: most be either GET, DELEte or POST, at least one of them. doesnt need to be there.
-		http_redirect: only one arg, needs to start with /, doesnt need to be there.
-		root: only one arg, needs to start with /, doesnt need to be there.
-		directory_listing: on or off.  off by default. doesnt need to be there.
+	server_names: ok if missing!
+	ports: at least 1!. between 0 and USHORT_MAX
+	error_pages {} ok if missing i think? need to check if that works
+	max_client_body_size:   in characters/bytes. up to int_max or sth i guess. only one, if not there read until eof
+	routes start with / and then the url, opens and closes brackets. {
+		http_redirect: only one arg, needs to start with /. if not there, use these settings! not allow other settings if there?
+		http_methods: must be either GET, DELEte or POST, at least one of them. if not there, allow all 3
+		root: only one arg, needs to start with /. if not there, use name of route. -> if not there check if route is valid path
 		default_file: doesnt need to be there. can be any file, so no limitations. needs to be one file however
-		cgi_extensions: need to be either .dms, .py, .c | all allowed by default, so no need
 		upload_directory: string. needs to start with /. if upload is on, needs to be there. error if dir not there. can be created maybe?
 							inc, obj, src, conf invalid.
+		directory_listing: on or off.  off by default. doesnt need to be there.
+		cgi_extensions: need to be either .dms, .py, .c | all allowed by default, so no need
 	}
 		}
 
-void { max_Client_body_size: 4, 5, 2; /hello {} }
+void { max_Client_body_size: 4, 5, 2 /hello {} }
 
-some { server_names: ; 
-ports:;
-error_pages:     ; max_client_body_size;
-things;
+some { server_names:  
+ports:
+error_pages:      max_client_body_size
+things
 /hello {
-	http_methods: ;
-	http_redirect: ;
-	root:;
-	directory_listing:  fdd        ; default_file:;
-	cgi_extensions: ;
+	http_methods: 
+	http_redirect: 
+	root:
+	directory_listing:  fdd         default_file:
+	cgi_extensions: 
 	upload_directory:     	 	
-	;
+	
 }
 
 
