--- a/conf/default.conf
+++ b/conf/default.conf
@@ -45,7 +45,7 @@ wrong { love {
 	}
 	/whatsup {
 		http_methods: DELETE
-		root: /html/hehe
+		alias: /html/hehe
 		directory_listing: off
 		default_file: goodbye.html
 		cgi_extensions: .dms
@@ -69,8 +69,9 @@ hate {
 		http_redirect: only one arg, needs to start with /. if not there, use these settings! not allow other settings if there?
 		http_methods: must be either GET, DELEte or POST, at least one of them. if not there, allow all 3
 		root: only one arg, needs to start with /. if not there, use name of route. -> if not there check if route is valid path
+		alias: either root or alias. 
 		default_file: doesnt need to be there. can be any file, so no limitations. needs to be one file however
-		upload_directory: string. needs to start with /. if upload is on, needs to be there. error if dir not there. can be created maybe?
+		upload_directory: string. needs to start with /. if not there, use root. error if dir not there. can be created maybe?
 							inc, obj, src, conf invalid.
 		directory_listing: on or off.  off by default. doesnt need to be there.
 		cgi_extensions: need to be either .dms, .py, .c | all allowed by default, so no need
