--- a/conf/default.conf
+++ b/conf/default.conf
@@ -62,9 +62,9 @@ general rules:
 
 hate {
 	server_names: ok if missing!
-	ports: at least 1!. between 0 and USHORT_MAX
+	ports: at least 1!. between 0 and USHORT_MAX.
 	error_pages {} ok if missing i think? need to check if that works
-	max_client_body_size:   in characters/bytes. up to int_max or sth i guess. only one, if not there read until eof
+	max_client_body_size:   in characters/bytes. 1 to USHORT_MAX. only one, if not there read until eof/allow infinte size
 	routes start with / and then the url, opens and closes brackets. {
 		http_redirect: only one arg, needs to start with /. if not there, use these settings! not allow other settings if there?
 		http_methods: must be either GET, DELEte or POST, at least one of them. if not there, allow all 3
