--- a/conf/default.conf
+++ b/conf/default.conf
@@ -64,9 +64,11 @@ hate {
 	server_names: ok if missing!
 	ports: at least 1!. between 0 and USHORT_MAX.
 	error_pages {} ok if missing i think? need to check if that works
+					code needs to be between 100 and 599, which is valid error_codes
+					error if filepath doesnt exist or program doesnt have read access
 	max_client_body_size:   in characters/bytes. 1 to USHORT_MAX. only one, if not there read until eof/allow infinte size
 	routes start with / and then the url, opens and closes brackets. {
-		http_redirect: only one arg, needs to start with /. if not there, use these settings! not allow other settings if there?
+		http_redirect: only one arg, needs to start with /. if not there, use these settings!
 		http_methods: must be either GET, DELEte or POST, at least one of them. if not there, allow all 3
 		root: only one arg, needs to start with /. if not there, use name of route. -> if not there check if route is valid path
 		alias: either root or alias. 
