config done, let's get testing!

--- a/conf/default.conf
+++ b/conf/default.conf
@@ -68,15 +68,15 @@ hate {
 					error if filepath doesnt exist or program doesnt have read access
 	max_client_body_size:   in characters/bytes. 1 to USHORT_MAX. only one, if not there read until eof/allow infinte size
 	routes start with / and then the url, opens and closes brackets. {
-		http_redirect: only one arg, needs to start with /. if not there, use these settings!
-		http_methods: must be either GET, DELEte or POST, at least one of them. if not there, allow all 3
-		root: only one arg, needs to start with /. if not there, use name of route. -> if not there check if route is valid path
+		http_redirect: only one arg. if not there, use these settings!
+		http_methods: must be either GET, DELETE or POST, at least one of them. if not there, allow all 3
+		root: only one arg. if not there, use name of route. -> if not there check if route is valid path
 		alias: either root or alias. 
 		default_file: doesnt need to be there. can be any file, so no limitations. needs to be one file however
 		upload_directory: string. needs to start with /. if not there, use root. error if dir not there. can be created maybe?
 							inc, obj, src, conf invalid.
 		directory_listing: on or off.  off by default. doesnt need to be there.
-		cgi_extensions: need to be either .dms, .py, .c | all allowed by default, so no need
+		cgi_extensions: need to be either .dms, .py, .c | all allowed by default, so no need. if empty value, none allowed.
 	}
 		}
 
