print function done. some weird error occured

--- a/conf/default.conf
+++ b/conf/default.conf
@@ -3,6 +3,34 @@ correct love {
 	ports: 6060, 303, 4, 10000
 	error_pages {
 		404: ./html/error404.html
+		505: ./html/error404.html
+	}
+	max_client_body_size: 56
+	/ {
+		http_methods: GET, DELETE, POST
+		http_redirect: /whatsup
+		root: ./html
+		directory_listing: on
+		default_file: index.html
+		cgi_extensions: .dms, .py, .c
+		upload_directory: ./html/upload
+	}
+	/whatsup {
+		http_methods: DELETE
+		root: ./html/hehe
+		directory_listing: off
+		default_file: goodbye.html
+		cgi_extensions: .dms
+		upload_directory: src
+	}
+}
+
+correct love {
+	server_names:	abcdegf, uhuh, no
+	ports: 6060, 303, 4, 10000
+	error_pages {
+		404: ./html/error404.html
+		505: ./html/error404.html
 	}
 	max_client_body_size: 56
 	/ {
