changed ports to port (only one port supported) (says so in the subject)

--- a/conf/default.conf
+++ b/conf/default.conf
@@ -1,6 +1,6 @@
 correct love {
 	server_names:	abcdegf, uhuh, no
-	ports: 6060, 303, 4, 10000
+	port: 6060
 	error_pages {
 		404: ./html/error404.html
 		505: ./html/error404.html
@@ -28,7 +28,7 @@ correct love {
 
 correct love {
 	server_names:	abcdegf, uhuh, no
-	ports: 6060, 303, 4, 10000
+	port: 6060
 	error_pages {
 		404: ./html/error404.html
 		505: ./html/error404.html
@@ -56,7 +56,7 @@ correct love {
 
 correct love {
 	server_names:	abcdegf, uhuh, no
-	ports: 6060, 303, 4, 10000
+	port:	303
 	error_pages {
 		404: ./html/error404.html
 		505: ./html/error404.html
