--- a/conf/explain.conf
+++ b/conf/explain.conf
@@ -1,6 +1,6 @@
 correct love {
 	server_names:	abcdegf, uhuh, no
-	ports: 6060, 303, 4, 1982773982713, hahaha, -80
+	port: -80
 	error_pages {
 		404: /html/error404.html
 	}
@@ -28,8 +28,7 @@ wrong { love {
 	server_names:	abcdegf, uhuh,
 	no
 	
-	ports: 6060, 303, 4,
-	1982773982713, hahaha, -80
+	port: hahaha
 	error_pages {
 		404: /html/error404.html
 	}}}
@@ -62,7 +61,7 @@ general rules:
 
 hate {
 	server_names: ok if missing!
-	ports: at least 1!. between 0 and USHORT_MAX.
+	port: only 1!, has to be there. between 0 and USHORT_MAX.
 	error_pages {} ok if missing i think? need to check if that works
 					code needs to be between 100 and 599, which is valid error_codes
 					error if filepath doesnt exist or program doesnt have read access
