root or alias -> only root directory

--- a/conf/default.conf
+++ b/conf/default.conf
@@ -6,73 +6,17 @@ correct love {
 		505: ./html/error404.html
 	}
 	max_client_body_size: 56
-	/ {
+	/hehe {
 		http_methods: GET, DELETE, POST
 		http_redirect: /whatsup
-		root: ./html
+		alias: ./html/hehe
 		directory_listing: on
-		default_file: index.html
+		default_file: whatsup.html
 		cgi_extensions: .dms, .py, .c
 		upload_directory: ./html/upload
 	}
 	/whatsup {
-		http_redirect: /
-		http_methods: DELETE
-		root: ./html/hehe
-		directory_listing: off
-		default_file: goodbye.html
-		cgi_extensions: .dms
-		upload_directory: src
-	}
-}
-
-correct love {
-	server_names:	abcdegf, uhuh, no
-	port: 6061
-	error_pages {
-		404: ./html/error404.html
-		505: ./html/error404.html
-	}
-	max_client_body_size: 56
-	/ {
-		http_methods: GET, DELETE, POST
-		http_redirect: /whatsup
-		root: ./html
-		directory_listing: on
-		default_file: index.html
-		cgi_extensions: .dms, .py, .c
-		upload_directory: ./html/upload
-	}
-	/whatsup {
-		http_redirect: /
-		http_methods: DELETE
-		root: ./html/hehe
-		directory_listing: off
-		default_file: goodbye.html
-		cgi_extensions: .dms
-		upload_directory: src
-	}
-}
-
-correct love {
-	server_names:	abcdegf, uhuh, no
-	port:	303
-	error_pages {
-		404: ./html/error404.html
-		505: ./html/error404.html
-	}
-	max_client_body_size: 56
-	/ {
-		http_methods: GET, DELETE, POST
-		http_redirect: /whatsup
-		root: ./html
-		directory_listing: on
-		default_file: index.html
-		cgi_extensions: .dms, .py, .c
-		upload_directory: ./html/upload
-	}
-	/whatsup {
-		http_redirect: /
+		http_redirect: /hehe
 		http_methods: DELETE
 		root: ./html/hehe
 		directory_listing: off
