Config: - default file for route mandatory - added Server root (mandatory)

--- a/conf/default.conf
+++ b/conf/default.conf
@@ -1,6 +1,7 @@
 correct love {
 	server_names:	abcdegf, uhuh, no
 	port: 6060
+	root: ./html
 	error_pages {
 		404: ./html/error404.html
 		505: ./html/error404.html
