--- a/conf/explain.conf
+++ b/conf/explain.conf
@@ -1,6 +1,7 @@
 correct love {
 	server_names:	abcdegf, uhuh, no
 	port: -80
+	root: ./html
 	error_pages {
 		404: /html/error404.html
 	}
@@ -29,6 +30,7 @@ wrong { love {
 	no
 	
 	port: hahaha
+	root: hahahahah
 	error_pages {
 		404: /html/error404.html
 	}}}
@@ -57,11 +59,12 @@ general rules:
 	- 3 types of lines:	new block		-> optionally name and then an opening bracket at the end of a lines
 						closing block	-> only whitespace and then closing bracket at EOL
 						setting			-> no brackets, whitespace allowed, needs to have semicolon
-						(empty)			-> empty line with any kind of whitespace allowed
+						(empty)			-> empty line with any kind of whitespace allowed and ignored
 
 hate {
 	server_names: ok if missing!
 	port: only 1!, has to be there. between 0 and USHORT_MAX.
+	root: has to be valid path. only 1. mandatory.
 	error_pages {} ok if missing i think? need to check if that works
 					code needs to be between 100 and 599, which is valid error_codes
 					error if filepath doesnt exist or program doesnt have read access
@@ -69,17 +72,17 @@ hate {
 	routes start with / and then the url, opens and closes brackets. {
 		http_redirect: only one arg. if not there, use these settings!
 		http_methods: must be either GET, DELETE or POST, at least one of them. if not there, allow all 3
-		root: only one arg. if not there, use name of route. -> if not there check if route is valid path
+		root: only one arg. if not this neither alias, use name of route. -> if not there check if route is valid path
 		alias: either root or alias. 
 		default_file: doesnt need to be there. can be any file, so no limitations. needs to be one file however
-		upload_directory: string. needs to start with /. if not there, use root. error if dir not there. can be created maybe?
+		upload_directory: string. if not there, use root. error if dir not there. can be created maybe?
 							inc, obj, src, conf invalid.
 		directory_listing: on or off.  off by default. doesnt need to be there.
 		cgi_extensions: need to be either .dms, .py, .c | all allowed by default, so no need. if empty value, none allowed.
 	}
 		}
 
-void { max_Client_body_size: 4, 5, 2 /hello {} }
+void { max_client_body_size: 4, 5, 2 /hello {} }
 
 some { server_names:  
 ports:
