--- a/conf/default.conf
+++ b/conf/default.conf
@@ -13,7 +13,7 @@ correct love {
 		alias: ./html/hehe
 		directory_listing: on
 		default_file: whatsup.html
-		cgi_extensions: .dms, .py, .c
+		cgi_extensions: .cgi, .py
 		upload_directory: ./html/upload
 	}
 	/whatsup {
@@ -22,7 +22,7 @@ correct love {
 		root: ./html/hehe
 		directory_listing: off
 		default_file: goodbye.html
-		cgi_extensions: .dms
+		cgi_extensions: .cgi
 		upload_directory: src
 	}
 }
