change default file for /hehe for testing purposes.

--- a/conf/default.conf
+++ b/conf/default.conf
@@ -12,7 +12,7 @@ correct love {
 		http_redirect: /whatsup
 		alias: ./html/hehe
 		directory_listing: on
-		default_file: whatsup.html
+		default_file: hello.html
 		cgi_extensions: .cgi, .py
 		upload_directory: ./html/upload
 	}
