default file added to server block

--- a/conf/default.conf
+++ b/conf/default.conf
@@ -1,7 +1,8 @@
-correct love {
+default {
 	server_names:	abcdegf, uhuh, no
 	port: 6060
 	root: ./html
+	default_file: index.html
 	error_pages {
 		404: ./html/error404.html
 		505: ./html/error404.html
