--- a/conf/explain.conf
+++ b/conf/explain.conf
@@ -2,6 +2,7 @@ correct love {
 	server_names:	abcdegf, uhuh, no
 	port: -80
 	root: ./html
+	default_file: index.html
 	error_pages {
 		404: /html/error404.html
 	}
@@ -65,6 +66,7 @@ hate {
 	server_names: ok if missing!
 	port: only 1!, has to be there. between 0 and USHORT_MAX.
 	root: has to be valid path. only 1. mandatory.
+	default_file: has to be there. only 1. has to be valid path.
 	error_pages {} ok if missing i think? need to check if that works
 					code needs to be between 100 and 599, which is valid error_codes
 					error if filepath doesnt exist or program doesnt have read access
