add default error pages.

--- a/conf/default.conf
+++ b/conf/default.conf
@@ -22,7 +22,7 @@ default {
 		http_methods: DELETE
 		root: ./html/hehe
 		directory_listing: off
-		default_file: goodbye.html
+		default_file: whatsup.html
 		cgi_extensions: .cgi
 		upload_directory: src
 	}
