--- a/conf/default2.conf
+++ b/conf/default2.conf
@@ -1,26 +1,39 @@
-server {
-	server_name: dms;
-	ports: 8080, 8081, 8082;
-	root: /html;
-
-	/disAndDat {
-		root: /hehe; # -> /html/hehe ????
-		alias: 
-		default_file: index.html;
+correct love {
+	server_names:	abcdegf, uhuh, no
+	port: 6060
+	root: ./html
+	error_pages {
+		404: ./html/error404.html
+		405: ./html/404/405.html
+		505: ./html/error404.html
 	}
-	error_page {
-		default: /html/error404.html;
+	max_client_body_size: 56
+	/disAndDat {
+		http_methods: GET, DELETE, POST
+		alias: ./html/hehe
+		directory_listing: on
+		default_file: hello.html
+		cgi_extensions: .cgi, .py
+		upload_directory: ./html/upload
 	}
 }
 
-server {
-	server_name: fortytwo;
-	ports: 4242;
-	root: /www;
-
-	/dasAndDit {
-		root: /hehe # -> /html/hehe ????
-		default_file: index.html
-		
+correct love {
+	server_names:	abcdegf, uhuh, no
+	port: 6061
+	root: ./html
+	error_pages {
+		404: ./html/error404.html
+		405: ./html/404/405.html
+		505: ./html/error404.html
+	}
+	max_client_body_size: 56
+	/disAndDat {
+		http_methods: GET, DELETE, POST
+		alias: ./html/hehe
+		directory_listing: on
+		default_file: hello.html
+		cgi_extensions: .cgi, .py
+		upload_directory: ./html/upload
 	}
 }
