update default2.conf to make it work for testing purposes.

--- a/conf/default2.conf
+++ b/conf/default2.conf
@@ -1,10 +1,10 @@
 correct love {
 	server_names:	abcdegf, uhuh, no
+	default_file: index.html
 	port: 6060
 	root: ./html
 	error_pages {
 		404: ./html/error404.html
-		405: ./html/404/405.html
 		505: ./html/error404.html
 	}
 	max_client_body_size: 56
@@ -21,10 +21,10 @@ correct love {
 correct love {
 	server_names:	abcdegf, uhuh, no
 	port: 6061
+	default_file: index2.html
 	root: ./html
 	error_pages {
 		404: ./html/error404.html
-		405: ./html/404/405.html
 		505: ./html/error404.html
 	}
 	max_client_body_size: 56
