fixed Config adding all cgi extensions if not there

--- a/conf/explain.conf
+++ b/conf/explain.conf
@@ -80,7 +80,7 @@ hate {
 		upload_directory: string. if not there, use root. error if dir not there. can be created maybe?
 							inc, obj, src, conf invalid.
 		directory_listing: on or off.  off by default. doesnt need to be there.
-		cgi_extensions: need to be either .dms, .py, .c | all allowed by default, so no need. if empty value, none allowed.
+		cgi_extensions: need to be either .cgi or .py | non-mandatory setting. in that case, no cgi is allowed for this route.
 	}
 		}
 
