--- a/conf/eval.conf
+++ b/conf/eval.conf
@@ -1,16 +1,39 @@
-eval 1 {
-	server_names:	abcdegf, uhuh, no
+blue {
+	server_names: blue_invalid
 	port: 6060
-	root: ./html
-	default_file: index.html
+	root: ./eval
+	default_file: blue_index.html
 	error_pages {
-		404: ./html/error404.html
-		505: ./html/error404.html
+		405: ./eval/blue_error405.html
+		404: ./eval/blue_error404.html
 	}
 	max_client_body_size: 56
-	/hehe {
-		http_methods: GET, DELETE, POST
-		http_redirect: /whatsup
+	/only_delete {
+		http_methods: DELETE
+		default_file: not_relevant.html
+	}
+	#/whatsup {
+	#	#http_redirect: /hehe
+	#	http_methods: DELETE
+	#	root: ./html/hehe
+	#	directory_listing: off
+	#	default_file: whatsup.html
+	#	cgi_extensions: .cgi
+	#	upload_directory: src
+	#}
+}
+
+pink {
+	server_names:	pink_invalid, localhost
+	port: 6062 #should be 6060
+	root: ./eval
+	default_file: pink_index.html
+	error_pages {
+		404: ./html/error404.html
+	}
+	max_client_body_size: 56
+	/only_delete {
+		http_methods: GET, POST, DELETE
 		alias: ./html/hehe
 		directory_listing: on
 		default_file: hello.html
@@ -18,7 +41,7 @@ eval 1 {
 		upload_directory: ./html/upload
 	}
 	/whatsup {
-		http_redirect: /hehe
+		#http_redirect: /hehe
 		http_methods: DELETE
 		root: ./html/hehe
 		directory_listing: off
@@ -28,32 +51,9 @@ eval 1 {
 	}
 }
 
-eval 2 {
-	server_names:	abcdegf, uhuh, no
-	port: 6060
-	root: ./html
-	default_file: index.html
-	error_pages {
-		404: ./html/error404.html
-		505: ./html/error404.html
-	}
-	max_client_body_size: 56
-	/hehe {
-		http_methods: GET, DELETE, POST
-		http_redirect: /whatsup
-		alias: ./html/hehe
-		directory_listing: on
-		default_file: hello.html
-		cgi_extensions: .cgi, .py
-		upload_directory: ./html/upload
-	}
-	/whatsup {
-		http_redirect: /hehe
-		http_methods: DELETE
-		root: ./html/hehe
-		directory_listing: off
-		default_file: whatsup.html
-		cgi_extensions: .cgi
-		upload_directory: src
-	}
+different_port {
+	server_names: different #remove later
+	port: 6061
+	root: ./eval
+	default_file: port_index.html
 }
