eval websites done!

--- a/conf/eval.conf
+++ b/conf/eval.conf
@@ -1,59 +1,55 @@
 blue {
-	server_names: blue_invalid
+	server_names: localhost
 	port: 6060
 	root: ./eval
 	default_file: blue_index.html
 	error_pages {
 		405: ./eval/blue_error405.html
 		404: ./eval/blue_error404.html
+		400: ./eval/blue_error400.html
 	}
-	max_client_body_size: 56
 	/only_delete {
 		http_methods: DELETE
 		default_file: not_relevant.html
 	}
-	#/whatsup {
-	#	#http_redirect: /hehe
-	#	http_methods: DELETE
-	#	root: ./html/hehe
-	#	directory_listing: off
-	#	default_file: whatsup.html
-	#	cgi_extensions: .cgi
-	#	upload_directory: src
-	#}
+	/redir {
+		http_redirect: /dark
+		default_file: not_relevant.html
+	}
+	/dark {
+		http_methods: DELETE, POST, GET
+		root: eval
+		directory_listing: on
+		default_file: dark_index.html
+		cgi_extensions: .cgi
+		upload_directory: eval/light
+	}
+	/light {
+		http_methods: DELETE, POST, GET
+		alias: eval/light
+		directory_listing: off
+		default_file: light_index.html
+		cgi_extensions: .py
+		upload_directory: eval/dark
+	}
 }
 
 pink {
-	server_names:	pink_invalid, localhost
-	port: 6062 #should be 6060
+	server_names:	localhost
+	port: 6061
 	root: ./eval
 	default_file: pink_index.html
 	error_pages {
-		404: ./html/error404.html
+		405: ./eval/blue_error405.html
+		404: ./eval/blue_error404.html
+		400: ./eval/blue_error400.html
 	}
-	max_client_body_size: 56
-	/only_delete {
-		http_methods: GET, POST, DELETE
-		alias: ./html/hehe
-		directory_listing: on
-		default_file: hello.html
-		cgi_extensions: .cgi, .py
-		upload_directory: ./html/upload
-	}
-	/whatsup {
-		#http_redirect: /hehe
-		http_methods: DELETE
-		root: ./html/hehe
-		directory_listing: off
-		default_file: whatsup.html
-		cgi_extensions: .cgi
-		upload_directory: src
-	}
+	max_client_body_size: 1000
 }
 
 different_port {
 	server_names: different #remove later
-	port: 6061
+	port: 6062
 	root: ./eval
 	default_file: port_index.html
 }
