dir listing is officialy done

--- a/conf/default.conf
+++ b/conf/default.conf
@@ -10,7 +10,7 @@ default {
 	max_client_body_size: 56
 	/hehe {
 		http_methods: GET, DELETE, POST
-		http_redirect: /whatsup
+		# http_redirect: /whatsup
 		alias: ./html/hehe
 		directory_listing: on
 		default_file: hello.html
@@ -19,7 +19,7 @@ default {
 	}
 	/whatsup {
 		http_methods: DELETE
-		root: ./html/hehe
+		alias: ./html/hehe/whatsup
 		directory_listing: off
 		default_file: whatsup.html
 		cgi_extensions: .cgi
