--- a/conf/default2.conf
+++ b/conf/default2.conf
@@ -1,5 +1,5 @@
 correct love {
-	server_names:	abcdegf, uhuh, no
+	server_names:	ac
 	default_file: index.html
 	port: 6060
 	root: ./html
@@ -18,7 +18,7 @@ correct love {
 }
 
 correct love {
-	server_names:	abcdegf, uhuh, no
+	server_names:	ab
 	port: 6061
 	default_file: index2.html
 	root: ./html
@@ -27,12 +27,20 @@ correct love {
 		505: ./html/error404.html
 	}
 	max_client_body_size: 56
+	/whatsup {
+		http_methods: GET, DELETE, POST
+		root: ./html/hehe/
+		directory_listing: on
+		default_file: whatsup.html
+		cgi_extensions: .cgi, .py
+		# upload_directory: ./html/upload
+	}
+
 	/disAndDat {
 		http_methods: GET, DELETE, POST
 		alias: ./html/hehe
 		directory_listing: on
 		default_file: hello.html
 		cgi_extensions: .cgi, .py
-		upload_directory: ./html/upload
 	}
 }
